--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
 	"license": "ISC",
 	"author": "Chris Strawser",
 	"main": "index.html",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mcochris/DieterRamsColors"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -18,8 +22,5 @@
 		"eslint": "^8.47.0",
 		"eslint-plugin-json": "^3.1.0",
 		"eslint-plugin-sonarjs": "^0.20.0"
-	},
-	"dependencies": {
-		"slim-select": "^2.6.0"
 	}
 }
