Using latest for dependencies, added tinycolor Bumped version #

--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
 	"name": "dieter-rams-colors",
 	"source": "index.html",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "Display color schemes Dieter Rams might have used",
 	"license": "FreeBSD",
 	"author": "Chris Strawser",
+	"scripts": {
+		"start": "parcel",
+		"build": "parcel build"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mcochris/DieterRamsColors"
 	},
 	"type": "module",
 	"devDependencies": {
-		"@html-eslint/eslint-plugin": "^0.19.1",
-		"@parcel/compressor-brotli": "^2.9.3",
-		"@types/node": "^20.5.1",
-		"@typescript-eslint/eslint-plugin": "^6.4.1",
-		"eslint": "^8.47.0",
-		"eslint-plugin-json": "^3.1.0",
-		"eslint-plugin-sonarjs": "^0.20.0",
-		"parcel": "^2.9.3"
+		"@html-eslint/eslint-plugin": "latest",
+		"@parcel/compressor-brotli": "latest",
+		"@types/node": "latest",
+		"@typescript-eslint/eslint-plugin": "latest",
+		"eslint": "latest",
+		"eslint-plugin-json": "latest",
+		"eslint-plugin-sonarjs": "latest",
+		"parcel": "latest"
+	},
+	"dependencies": {
+		"@ctrl/tinycolor": "^4.0.2"
 	}
 }
